feature: move argument requirement out of CommandArgument (#489)
This moves required and defaultValue out of CommandArgument, into CommandComponent. This reduces the verbosity of the command arguments by no longer forcing multiple static methods to determine whether the argument is required.

Whether an argument is required is now specified when adding the argument to the command. The previous argument methods on the command builder have been replaced by required/optional methods with many different overloads. We no longer have the ability to pass typed default values to the arguments as the command arguments no longer store the default values. We will have to think of a suitable replacement.

To facilitate this movement of data we've had to replace many references to CommandArgument with CommandComponent. To make this easier the CommandTree.Node class has been made less generic and has also been renamed to CommandTree.CommandNode.

Many deprecated methods have been removed as there is no real point in updating them as we'll want to drop them before releasing v2 anyway.